会员中心结构与样式的修改

--- a/member.html
+++ b/member.html
@@ -38,30 +38,40 @@
                             <span class="det_s2">0</span>
                     </li>
                     <li class="det_list det_p">
-                        <a class="det_icon1" href=""></a>
+                        <a class="mem_link" href="">
+                        <small class="det_icon1"></small>
                         <span class="det_wz">我要购买</span>
-                        <a class="arrow_r" href=""></a>
+                        <small class="arrow_r"></small>
+                    </a>
                     </li>
                     <li class="det_list det_p" id="to_profile">
-                        <a class="det_icon2" href=""></a>
+                        <a class="mem_link" href="">
+                        <small class="det_icon2"></small>
                         <span class="det_wz">我的信息</span>
-                        <a class="arrow_r" href=""></a>
+                        <small class="arrow_r" ></small>
+                        </a>
                     </li>
                     <li class="det_list det_p">
-                        <a class="det_icon3" href=""></a>
+                        <a class="mem_link" href="">
+                        <small class="det_icon3"></small>
                         <span class="det_wz">我的二维码</span>
-                        <a class="arrow_r" href=""></a>
+                        <small class="arrow_r"></small>
+                    </a>
                     </li>
                     <li class="det_list det_p" id="to_orderlist">
-                        <a class="det_icon4" href=""></a>
+                            <a class="mem_link" href="">
+                        <small class="det_icon4"></small>
                         <span class="det_wz">订单管理<span class="check">查看所有订单</span></span>
                         
-                        <a class="arrow_r" href=""></a>
+                        <small class="arrow_r"></small>
+                    </a>
                     </li>
                     <li class="det_list det_p">
-                        <a class="det_icon5" href=""></a>
+                            <a class="mem_link" href="">
+                        <small class="det_icon5"></small>
                         <span class="det_wz">我的朋友圈</span>
-                        <a class="arrow_r" href=""></a>
+                        <small class="arrow_r"></small>
+                    </a>
                     </li>
 
                 </ul>
@@ -70,19 +80,25 @@
             <div class="profile_list">
                 <ul class="prof_detail">
                     <li class="det_list det_p" id="toTixian">
-                        <a class="det_icon6" href=""></a>
+                            <a class="mem_link" href="">
+                        <small class="det_icon6"></small>
                         <span class="det_wz">佣金提现</span>
-                        <a class="arrow_r" href=""></a>
+                        <small class="arrow_r"></small>
+                    </a>
                     </li>
                     <li class="det_list det_p" id="to_tixianlist">
-                        <a class="det_icon7" href=""></a>
+                            <a class="mem_link" href="">
+                        <small class="det_icon7"></small>
                         <span class="det_wz">提现列表</span>
-                        <a class="arrow_r" href=""></a>
+                        <small class="arrow_r"></small>
+                    </a>
                     </li>
                     <li class="det_list det_p" id="to_cwmx">
-                        <a class="det_icon8" href=""></a>
+                            <a class="mem_link" href="">
+                        <small class="det_icon8"></small>
                         <span class="det_wz">财务明细</span>
-                        <a class="arrow_r" href=""></a>
+                        <small class="arrow_r"></small>
+                    </a>
                     </li>
                 </ul>
             </div>
