--- a/tixian_list.html
+++ b/tixian_list.html
@@ -31,7 +31,7 @@
                     <p class="jjtx">奖金提现：
                         <span>￥1200</span>
                     </p>
-                    <span class="date">2017/12/23 &nbsp
+                    <span class="date">2017/12/23 &nbsp;
                         <span class="time">09:27:12</span>
                     </span>
                 </li>
@@ -45,7 +45,7 @@
                     <p class="jjtx">奖金提现：
                         <span>￥1200</span>
                     </p>
-                    <span class="date">2017/12/23 &nbsp
+                    <span class="date">2017/12/23 &nbsp;
                         <span class="time">09:27:12</span>
                     </span>
                 </li>
@@ -59,7 +59,7 @@
                     <p class="jjtx">奖金提现：
                         <span>￥1200</span>
                     </p>
-                    <span class="date">2017/12/23 &nbsp
+                    <span class="date">2017/12/23 &nbsp;
                         <span class="time">09:27:12</span>
                     </span>
                 </li>
