--- a/member.html
+++ b/member.html
@@ -32,10 +32,19 @@
                     <li class="det_list">
                         <span class="det_1">奖金：
                             <span class="det_s1">0元</span>
+                        </span>
                     </li>
                     <li class="det_list">
                         <span class="det_1">窝窝鸡分：
                             <span class="det_s2">0</span>
+                        </span>
+                    </li>
+                    <li class="det_list det_p">
+                        <a class="mem_link" href="">
+                        <small class="det_icon0"></small>
+                        <span class="det_wz">投诉与建议</span>
+                        <small class="arrow_r"></small>
+                    </a>
                     </li>
                     <li class="det_list det_p">
                         <a class="mem_link" href="">
@@ -45,7 +54,7 @@
                     </a>
                     </li>
                     <li class="det_list det_p" id="to_profile">
-                        <a class="mem_link" href="">
+                        <a class="mem_link" href="profile.html">
                         <small class="det_icon2"></small>
                         <span class="det_wz">我的信息</span>
                         <small class="arrow_r" ></small>
@@ -59,7 +68,7 @@
                     </a>
                     </li>
                     <li class="det_list det_p" id="to_orderlist">
-                            <a class="mem_link" href="">
+                            <a class="mem_link" href="order_list.html">
                         <small class="det_icon4"></small>
                         <span class="det_wz">订单管理<span class="check">查看所有订单</span></span>
                         
@@ -67,7 +76,7 @@
                     </a>
                     </li>
                     <li class="det_list det_p">
-                            <a class="mem_link" href="">
+                            <a class="mem_link" href="friends.html">
                         <small class="det_icon5"></small>
                         <span class="det_wz">我的朋友圈</span>
                         <small class="arrow_r"></small>
@@ -80,21 +89,21 @@
             <div class="profile_list">
                 <ul class="prof_detail">
                     <li class="det_list det_p" id="toTixian">
-                            <a class="mem_link" href="">
+                            <a class="mem_link" href="tixian.html">
                         <small class="det_icon6"></small>
                         <span class="det_wz">佣金提现</span>
                         <small class="arrow_r"></small>
                     </a>
                     </li>
                     <li class="det_list det_p" id="to_tixianlist">
-                            <a class="mem_link" href="">
+                            <a class="mem_link" href="tixian_list.html">
                         <small class="det_icon7"></small>
                         <span class="det_wz">提现列表</span>
                         <small class="arrow_r"></small>
                     </a>
                     </li>
                     <li class="det_list det_p" id="to_cwmx">
-                            <a class="mem_link" href="">
+                            <a class="mem_link" href="cwmx.html">
                         <small class="det_icon8"></small>
                         <span class="det_wz">财务明细</span>
                         <small class="arrow_r"></small>
