--- a/order_det.html
+++ b/order_det.html
@@ -56,7 +56,7 @@
             <div class="order_fk">
                 <p>共
                     <span>1</span>件 &nbsp; 应付总额:
-                    <span>￥99</span>
+                    <span>￥990000000000</span>
                 </p>
                 <span class="fk_btn">
                     <button class="cancel_btn">取消订单</button>
