--- a/profile.html
+++ b/profile.html
@@ -38,7 +38,7 @@
                         <span>3207429</span>
                     </li>
                 </ul>
-                <button class="xxgl_btn">收获信息管理</button>
+                <a href=""><button class="xxgl_btn">收获信息管理</button></a>
             </div>
         </div>
     </div>
